feat(trilateration): adding trilateration to get position of product
